[gd_scene load_steps=4 format=3 uid="uid://cuxg51nlnen64"]

[ext_resource type="Theme" uid="uid://bdh577l5x72ff" path="res://resources/base_theme.tres" id="1_nnl17"]
[ext_resource type="Script" path="res://screens/options.gd" id="2_rcn6h"]
[ext_resource type="Resource" uid="uid://s7jdke18576o" path="res://entities/game_manager/resources/game_data.tres" id="3_xeee6"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nnl17")
script = ExtResource("2_rcn6h")
game_data = ExtResource("3_xeee6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_right = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
offset_right = 120.0
offset_bottom = 17.0
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2i(120, 0)
layout_mode = 2
offset_top = 21.0
offset_right = 120.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
offset_right = 120.0
offset_bottom = 17.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(40, 0)
layout_mode = 2
offset_right = 40.0
offset_bottom = 17.0
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 44.0
offset_right = 120.0
offset_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
step = 5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
offset_top = 21.0
offset_right = 120.0
offset_bottom = 38.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2i(40, 0)
layout_mode = 2
offset_right = 40.0
offset_bottom = 17.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
offset_left = 44.0
offset_right = 120.0
offset_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
step = 5.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
anchors_preset = 0
offset_top = 63.0
offset_right = 120.0
offset_bottom = 114.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 118.0
offset_right = 120.0
offset_bottom = 140.0
text = "Back"
